--- a/front/package.json
+++ b/front/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@mui/icons-material": "^5.2.5",
+    "@mui/material": "^5.2.7",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.0",
     "sass": "^1.46.0",
